* July 12, 2008, Anthony Morphett *

Updated sysinfo to use new get_system_info() version.
Make 'strace --help' work.
Corrections to dhcpc as pointed out by c0x.

* July 8, 2008, Kristian Van Der Vliet *

Added three new AGP GART HCD drivers for ALi, nVidia & SiS chipsets. All
drivers are from Dee Sharpe.

* June 6, 2008, Kristian Van Der Vliet *

Added an AGP bus manager and Via AGP GART HCD driver. All of this is from Dee
Sharpe <demetrioussharpe@netscape.net>

* May 1, 2008, Anthony Morphett *

Documentation updates and bugfixes for BitmapImage relating to
Bitmap::SHARE_FRAMEBUFFER flag

* April 22, 2008, Kristian Van Der Vliet *

Patches from Anthony Morphett

 o Make the mousewheel work properly in DropdownMenus
 o Make ctrl+home, ctrl+end, shift+ctrl+home, shift+ctrl+end work properly in
   AEdit and TextViews

* April 15, 2008, Kristian Van Der Vliet *

Detect the Intel i945GME chip with the i855 driver.

* April 11, 2008, Kaj de Vos *

Gave priority to the resource packages installed in /usr/ over software installed in
/usr/local/. This means that you can port software according to its standard instructions,
and then later install an official package for it in /usr/ without having to painfully
delete the scattered files under /usr/local/.

* March 24, 2008, Kristian Van Der Vliet *

Updated the GeForceFX driver with PCI IDs for newer cards. Untested. Patch from
Alexandru Mizeranschi <lexu_85@yahoo.com>

* March 9, 2008, Kristian Van Der Vliet *

Some patches from Anthony Morphett

o An improved shutdown tool to do a clean shutdown via the appserver. This is intended
  to replace the current shutdown and reboot tools which don't give apps a chance to
  quit cleanly.
o In the mouse prefs app, the doubleclick speed values it was setting were off by a
  factor of 100, so even the slowest speed was way to fast to be usable. Also the
  doubleclick slider wasn't initially being set to the right value.